--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -1,13 +1,10 @@
-<h1>About</h1>
-<p>Repository: <a href="https://github.com/mdecourse/cmstemplate">https://github.com/mdecourse/cmstemplate</a></p>
-<p>Github Pages: <a href="https://mde.tw/cmstemplate">https://mde.tw/cmstemplate</a></p>
-<p>其實 2005 年 <a href="https://en.wikipedia.org/wiki/Git">Git</a> 已經出現, 2006 年 <a href="https://en.wikipedia.org/wiki/Fossil_(software)">Fossil SCM</a> 也陸續推出. 但是在 2008 年以機械工程師管理個人電子檔案的文章:</p>
-<p><a href="/downloads/2008_Organizing and Managing Personal Electronic Files- A Mechanical Engineer’s Perspective.pdf">2008_Organizing and Managing Personal Electronic Files- A Mechanical Engineer’s Perspective.pdf</a> 雖然沒能提及分散式版次管理系統的概念, 但這篇文章至少出現許多機械相關領域人士必須了解的單字與專有名稱, 因此仍將它保留在此.</p>
-<p>至於 <a href="/downloads/PythonNotesForProfessionals.pdf">PythonNotesForProfessionals.pdf</a> 則是一份由電腦系統自動整理出來的 Python 相關資料.</p>
-<p>利用 cmstemplate 建立以 CMSiMDE 作為子模組的動態與靜態網站方法為:</p>
-<ol>
-<li>登入 Github 帳號</li>
-<li>將瀏覽器指向 <a href="https://github.com/mdecourse/cmstemplate">https://github.com/mdecourse/cmstemplate</a></li>
-<li>利用 <span style="background-color: #00ff00;">Use this template</span> 按鈕建立倉儲</li>
-</ol>
+<h1>Group member</h1>
+<p>team leader    40723240 楊朝有</p>
+<p>team member 40723238 黃語晨</p>
+<h1>Project progress</h1>
+<p><span style="color: #ff0000;">w14</span></p>
+<p>進行分組</p>
+<p>進行gitlab同步</p>
+<p>即將進行ubuntu操作</p>
+<h1><strong>Final report</strong></h1>
 <p></p>
