--- a/content/Project progress.html
+++ b/content/Project progress.html
@@ -139,7 +139,9 @@ img.add_border {
 <p>進行分組</p>
 <p>進行gitlab同步</p>
 <p>即將進行ubuntu操作</p>
-<br />Group member << <a href='Group member.html'>Previous</a> <a href='Final report.html'>Next</a> >> Final report</div>
+<p>w15</p>
+<p>開會紀錄</p>
+<p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/PNEg6KumGUI" width="560"></iframe></p><br />Group member << <a href='Group member.html'>Previous</a> <a href='Final report.html'>Next</a> >> Final report</div>
         
     <!-- footer -->
       <div class="container">
