--- a/config/content.htm
+++ b/config/content.htm
@@ -6,7 +6,8 @@
 <p>進行分組</p>
 <p>進行gitlab同步</p>
 <p>即將進行ubuntu操作</p>
-<p>w15</p>
+<p><span style="color: #ff0000;">w15</span></p>
 <p>開會紀錄</p>
+<p>以組員分享畫面遇到問題提出來解決</p>
 <p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/PNEg6KumGUI" width="560"></iframe></p><h1>Final report</h1>
 <p></p>
