--- a/content/Project progress.html
+++ b/content/Project progress.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html><html>
         <head>
-        <title>CMSTemplate</title>
+        <title>wcm2021 ag6</title>
         <meta charset="utf-8">
 <meta property="head" content="H1">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -139,8 +139,9 @@ img.add_border {
 <p>進行分組</p>
 <p>進行gitlab同步</p>
 <p>即將進行ubuntu操作</p>
-<p>w15</p>
+<p><span style="color: #ff0000;">w15</span></p>
 <p>開會紀錄</p>
+<p>以組員分享畫面遇到問題提出來解決</p>
 <p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/PNEg6KumGUI" width="560"></iframe></p><br />Group member << <a href='Group member.html'>Previous</a> <a href='Final report.html'>Next</a> >> Final report</div>
         
     <!-- footer -->
