--- a/content/Final report.html
+++ b/content/Final report.html
@@ -123,7 +123,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='Group member.html'>Group member</a><li><a href='Project progress.html'>Project progress</a><li><a href='Final report.html'>Final report</a></li>
+                     <li><a href='Group member.html'>Group member</a><li><a href='Project progress.html'>Project progress</a><li><a href='Final Report.html'>Final Report</a></li>
                       </ul>
                 </nav>
               </div>
@@ -134,7 +134,7 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">Project progress << <a href='Project progress.html'>Previous</a> <br /><h1>Final report</h1>
+    <div id="tipue_search_content">Project progress << <a href='Project progress.html'>Previous</a> <br /><h1>Final Report</h1>
 <p></p><br />Project progress << <a href='Project progress.html'>Previous</a> </div>
         
     <!-- footer -->
