--- a/content/Group member.html
+++ b/content/Group member.html
@@ -123,7 +123,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='Group member.html'>Group member</a><li><a href='Project progress.html'>Project progress</a><li><a href='Final report.html'>Final report</a></li>
+                     <li><a href='Group member.html'>Group member</a><li><a href='Project progress.html'>Project progress</a><li><a href='Final Report.html'>Final Report</a></li>
                       </ul>
                 </nav>
               </div>
@@ -135,8 +135,8 @@ img.add_border {
           
         </header>
     <div id="tipue_search_content"> <a href='Project progress.html'>Next</a> >> Project progress<br /><h1>Group member</h1>
-<p>team leader    40723240 楊朝有</p>
-<p>team member 40723238 黃語晨</p>
+<p></p>
+<p><span>wcm2021-ag6</span><br/><a href="https://s40723240.github.io/wcm2021">40723240 web</a><span><span> </span>|<span> </span></span><a href="https://github.com/s40723240/wcm2021">40723240 repo</a><span><span> </span>|<span> </span></span><a href="https://s40723240.github.io/wcm2021-ag6">grp web</a><span><span> </span>|<span> </span></span><a href="https://github.com/s40723240/wcm2021-ag6">grp repo</a><span></span><br/><a href="https://s40723238.github.io/wcm2021">40723238 web</a><span><span> </span>|<span> </span></span><a href="https://github.com/s40723238/wcm2021">40723238 repo</a><span><span> </span>|<span> </span></span><a href="https://s40723238.github.io/wcm2021-ag6">grp web</a><span><span> </span>|<span> </span></span><a href="https://github.com/s40723238/wcm2021-ag6">grp repo</a></p>
 <br /> <a href='Project progress.html'>Next</a> >> Project progress</div>
         
     <!-- footer -->
