--- a/content/Project progress.html
+++ b/content/Project progress.html
@@ -123,7 +123,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='Group member.html'>Group member</a><li><a href='Project progress.html'>Project progress</a><li><a href='Final report.html'>Final report</a></li>
+                     <li><a href='Group member.html'>Group member</a><li><a href='Project progress.html'>Project progress</a><li><a href='Final Report.html'>Final Report</a></li>
                       </ul>
                 </nav>
               </div>
@@ -134,15 +134,21 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">Group member << <a href='Group member.html'>Previous</a> <a href='Final report.html'>Next</a> >> Final report<br /><h1>Project progress</h1>
+    <div id="tipue_search_content">Group member << <a href='Group member.html'>Previous</a> <a href='Final Report.html'>Next</a> >> Final Report<br /><h1>Project progress</h1>
 <p><span style="color: #ff0000;">w14</span></p>
 <p>進行分組</p>
-<p>進行gitlab同步</p>
-<p>即將進行ubuntu操作</p>
+<p>說明gitlab同步</p>
+<p>說明ubuntu</p>
 <p><span style="color: #ff0000;">w15</span></p>
 <p>開會紀錄</p>
 <p>以組員分享畫面遇到問題提出來解決</p>
-<p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/PNEg6KumGUI" width="560"></iframe></p><br />Group member << <a href='Group member.html'>Previous</a> <a href='Final report.html'>Next</a> >> Final report</div>
+<p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/PNEg6KumGUI" width="560"></iframe><br/><br/></p>
+<p><span style="color: #ff0000;">w16</span></p>
+<p><span style="color: #000000;">40723240</span></p>
+<p><a href="https://s40723240.herokuapp.com/content/index.html">倉儲同步heroku</a></p>
+<p><a href="https://a40723240.herokuapp.com/content/index.html">第一台靜態主機</a></p>
+<p><a href="https://b40723240.herokuapp.com/get_page/%E5%BB%BA%E7%AB%8B%E7%B6%B2%E9%A0%81">第二台動態主機</a></p>
+<br />Group member << <a href='Group member.html'>Previous</a> <a href='Final Report.html'>Next</a> >> Final Report</div>
         
     <!-- footer -->
       <div class="container">
