--- a/content/sitemap.html
+++ b/content/sitemap.html
@@ -121,7 +121,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='Group member.html'>Group member</a><li><a href='Project progress.html'>Project progress</a><li><a href='Final report.html'>Final report</a></li>
+                     <li><a href='Group member.html'>Group member</a><li><a href='Project progress.html'>Project progress</a><li><a href='Final Report.html'>Final Report</a></li>
                       </ul>
                 </nav>
               </div>
@@ -132,4 +132,4 @@ img.add_border {
           </div>
           
         </header>
-    </nav><section><h1>Site Map</h1><div id="tipue_search_content"></div><ul><li><a href='Group member.html'>Group member</a><li><a href='Project progress.html'>Project progress</a><li><a href='Final report.html'>Final report</a></li></ul></section></div></body></html>
+    </nav><section><h1>Site Map</h1><div id="tipue_search_content"></div><ul><li><a href='Group member.html'>Group member</a><li><a href='Project progress.html'>Project progress</a><li><a href='Final Report.html'>Final Report</a></li></ul></section></div></body></html>
