--- a/config/content.htm
+++ b/config/content.htm
@@ -1,13 +1,19 @@
 <h1>Group member</h1>
-<p>team leader    40723240 楊朝有</p>
-<p>team member 40723238 黃語晨</p>
+<p></p>
+<p><span>wcm2021-ag6</span><br/><a href="https://s40723240.github.io/wcm2021">40723240 web</a><span><span> </span>|<span> </span></span><a href="https://github.com/s40723240/wcm2021">40723240 repo</a><span><span> </span>|<span> </span></span><a href="https://s40723240.github.io/wcm2021-ag6">grp web</a><span><span> </span>|<span> </span></span><a href="https://github.com/s40723240/wcm2021-ag6">grp repo</a><span></span><br/><a href="https://s40723238.github.io/wcm2021">40723238 web</a><span><span> </span>|<span> </span></span><a href="https://github.com/s40723238/wcm2021">40723238 repo</a><span><span> </span>|<span> </span></span><a href="https://s40723238.github.io/wcm2021-ag6">grp web</a><span><span> </span>|<span> </span></span><a href="https://github.com/s40723238/wcm2021-ag6">grp repo</a></p>
 <h1>Project progress</h1>
 <p><span style="color: #ff0000;">w14</span></p>
 <p>進行分組</p>
-<p>進行gitlab同步</p>
-<p>即將進行ubuntu操作</p>
+<p>說明gitlab同步</p>
+<p>說明ubuntu</p>
 <p><span style="color: #ff0000;">w15</span></p>
 <p>開會紀錄</p>
 <p>以組員分享畫面遇到問題提出來解決</p>
-<p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/PNEg6KumGUI" width="560"></iframe></p><h1>Final report</h1>
+<p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/PNEg6KumGUI" width="560"></iframe><br/><br/></p>
+<p><span style="color: #ff0000;">w16</span></p>
+<p><span style="color: #000000;">40723240</span></p>
+<p><a href="https://s40723240.herokuapp.com/content/index.html">倉儲同步heroku</a></p>
+<p><a href="https://a40723240.herokuapp.com/content/index.html">第一台靜態主機</a></p>
+<p><a href="https://b40723240.herokuapp.com/get_page/%E5%BB%BA%E7%AB%8B%E7%B6%B2%E9%A0%81">第二台動態主機</a></p>
+<h1>Final Report</h1>
 <p></p>
