--- a/content/FinalReport.html
+++ b/content/FinalReport.html
@@ -123,7 +123,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='Group member.html'>Group member</a><li><a href='Project progress.html'>Project progress</a><li><a href='Final Report.html'>Final Report</a></li>
+                     <li><a href='Group member.html'>Group member</a><li><a href='Project progress.html'>Project progress</a><li><a href='FinalReport.html'>FinalReport</a></li>
                       </ul>
                 </nav>
               </div>
@@ -134,7 +134,9 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">Project progress << <a href='Project progress.html'>Previous</a> <br /><h1>Final Report</h1>
+    <div id="tipue_search_content">Project progress << <a href='Project progress.html'>Previous</a> <br /><h1>FinalReport</h1>
+<h4>40723240</h4>
+<p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/GG6QsSOAYBE" width="560"></iframe></p>
 <p></p><br />Project progress << <a href='Project progress.html'>Previous</a> </div>
         
     <!-- footer -->
